fix proto3 零值
