# common/goods/api/api.swagger.json
@@ -43,7 +43,7 @@
                         "name": "id",
                         "description": "制造商id",
                         "in": "query",
-                        "required": false,
+                        "required": true,
                         "type": "integer"
                     }
                 ],
@@ -85,6 +85,76 @@
                     {
                         "name": "size",
                         "description": "每页数量",
+                        "in": "query",
+                        "required": false,
+                        "type": "integer"
+                    }
+                ],
+                "tags": [
+                    "goods.service.v1.Goods"
+                ]
+            }
+        },
+        "/category": {
+            "get": {
+                "summary": "获取商品分类详情",
+                "responses": {
+                    "200": {
+                        "description": "A successful response.",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "code": {
+                                    "type": "integer"
+                                },
+                                "message": {
+                                    "type": "string"
+                                },
+                                "data": {
+                                    "$ref": "#/definitions/.goods.service.v1.CategoryRes"
+                                }
+                            }
+                        }
+                    }
+                },
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "query",
+                        "required": false,
+                        "type": "integer"
+                    }
+                ],
+                "tags": [
+                    "goods.service.v1.Goods"
+                ]
+            }
+        },
+        "/category/list": {
+            "get": {
+                "summary": "获取子商品分类列表",
+                "responses": {
+                    "200": {
+                        "description": "A successful response.",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "code": {
+                                    "type": "integer"
+                                },
+                                "message": {
+                                    "type": "string"
+                                },
+                                "data": {
+                                    "$ref": "#/definitions/.goods.service.v1.CateGoryListRes"
+                                }
+                            }
+                        }
+                    }
+                },
+                "parameters": [
+                    {
+                        "name": "parentId",
                         "in": "query",
                         "required": false,
                         "type": "integer"
@@ -162,6 +232,13 @@
                         "type": "integer"
                     },
                     {
+                        "name": "isNew",
+                        "description": "是否是新品 1:是、0:否",
+                        "in": "query",
+                        "required": false,
+                        "type": "integer"
+                    },
+                    {
                         "name": "page",
                         "description": "页数",
                         "in": "query",
@@ -171,6 +248,13 @@
                     {
                         "name": "size",
                         "description": "每页数量",
+                        "in": "query",
+                        "required": false,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "categoryId",
+                        "description": "商品分类id",
                         "in": "query",
                         "required": false,
                         "type": "integer"
@@ -208,7 +292,10 @@
                     "description": "制造商id"
                 }
             },
-            "description": "制造商详情Req"
+            "description": "制造商详情Req",
+            "required": [
+                "id"
+            ]
         },
         ".goods.service.v1.BrandsDetailRes": {
             "type": "object",
@@ -246,6 +333,63 @@
             },
             "description": "制造商列表Req"
         },
+        ".goods.service.v1.CateGoryListRes": {
+            "type": "object",
+            "properties": {
+                "categoryList": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/.goods.service.v1.CategoryRes"
+                    }
+                }
+            },
+            "description": "分类列表Res"
+        },
+        ".goods.service.v1.CategoryChildReq": {
+            "type": "object",
+            "properties": {
+                "parentId": {
+                    "type": "integer"
+                }
+            },
+            "description": "获取子分类列表Req"
+        },
+        ".goods.service.v1.CategoryReq": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                }
+            },
+            "description": "获取分类详情Req"
+        },
+        ".goods.service.v1.CategoryRes": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "front_desc": {
+                    "type": "string"
+                },
+                "front_name": {
+                    "type": "string"
+                },
+                "parent_id": {
+                    "type": "integer"
+                },
+                "wap_banner_url": {
+                    "type": "string"
+                },
+                "icon_url": {
+                    "type": "string"
+                }
+            },
+            "description": "商品分类详情Res"
+        },
         ".goods.service.v1.GoodsDetailReq": {
             "type": "object",
             "properties": {
@@ -280,6 +424,10 @@
                     "type": "integer",
                     "description": "是否是热销 1:是、0:否"
                 },
+                "isNew": {
+                    "type": "integer",
+                    "description": "是否是新品 1:是、0:否"
+                },
                 "page": {
                     "type": "integer",
                     "description": "页数"
@@ -287,6 +435,10 @@
                 "size": {
                     "type": "integer",
                     "description": "每页数量"
+                },
+                "categoryId": {
+                    "type": "integer",
+                    "description": "商品分类id"
                 }
             },
             "description": "商品列表Req"
